--- a/category.html
+++ b/category.html
@@ -32,7 +32,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="body">
-                            <h4 style="color: #03A9F4;" id="b1"> </h4>
+                            <h3 style="color: #03A9F4;" id="b1"> </h3>
                         </div>
                     </div>
                 </div>
@@ -62,13 +62,13 @@
                 store = window.localStorage.getItem("store");
 
                 if (store == "video") {
-                    $("#b1").html("<a href='store.html'>Videos</a> > CATEGORY");
+                    $("#b1").html("<a href='store.html'>Store</a> > Videos");
                 }
                 if (store == "pdf") {
-                    $("#b1").html("<a href='store.html'>E-Books</a> > CATEGORY");
+                    $("#b1").html("<a href='store.html'>Store</a> > E-Books");
                 }
                 if (store == "epub") {
-                    $("#b1").html("<a href='store.html'>Books</a> > CATEGORY");
+                    $("#b1").html("<a href='store.html'>Store</a> > Books");
                 }
             }
 
