--- a/masterpage.html
+++ b/masterpage.html
@@ -1,3 +1,13 @@
+<style>
+    .sidebar .menu .list a span {
+        font-size: 20px;
+    }
+    
+    .material-icons {
+        font-size: 30px;
+    }
+</style>
+
 <script src="menu.js"></script>
 
 <div class="page-loader-wrapper">
@@ -37,22 +47,18 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-                <!-- <li>
-                    <a href="#" style="font-size: 24px; font-weight: bolder;">BYGOZ E-LEARNING PRIVATE LIMITED</a>
-                </li> -->
-                <!-- <li>
-                    <a href="main.html" data-close="true">
-                        <i class="material-icons">home</i>
-                    </a>
-                </li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#" class="lnkLogin">
-                        <i class="material-icons">shopping_cart</i>
-                        <span>Cart</span>
-                    </a>
+                    <h4 class="uFullname" style="color: #FFF;"></h4>
+                    <h5 class="uEmailID" style="color: #FFF;"></h5>
                 </li>
+                <!-- <li>
+                    <a href="#" class="lnkLogin">
+                        <i class="material-icons">lock</i>
+                        <span style="font-size: 20px;">Login</span>
+                    </a>
+                </li> -->
             </ul>
         </div>
     </div>
@@ -109,22 +115,6 @@
                     </a>
                     <hr style="margin-bottom: 0; margin-top: 0;" />
                 </li>
-
-                <!-- <li>
-                    <a href="#" class="lnkFavouriteBooks">
-                        <i class="material-icons">bookmarks</i>
-                        <span>FAVOURITE BOOK</span>
-                    </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
-                </li> -->
-
-                <!-- <li>
-                    <a href="#" class="lnkTranscationHistory">
-                        <i class="material-icons">account_balance_wallet</i>
-                        <span>TRANSCATION HISTORY</span>
-                    </a>
-                    <hr style="margin-bottom: 0; margin-top: 0;" />
-                </li> -->
 
                 <li>
                     <a href="myprofile.html" class="lnkMyProfile">
