--- a/booklist2.html
+++ b/booklist2.html
@@ -61,13 +61,13 @@
                         subCategoryName = window.localStorage.getItem("subCategoryName");
 
                         if (store == "video") {
-                            b3 = "<a href='store.html'>Videos</a> > <a href='category.html'>" + categoryName + "</a> > <a href='subcategory.html'>" + subCategoryName + "</a> > BOOK LIST";
+                            b3 = "<a href='store.html'>Store</a> > <a href='category.html'>Videos</a> > <a href='subcategory.html'>" + categoryName + "</a> > " + subCategoryName;
                         }
                         if (store == "pdf") {
-                            b3 = "<a href='store.html'>E-Books</a> > <a href='category.html'>" + categoryName + "</a> > <a href='subcategory.html'>" + subCategoryName + "</a> > BOOK LIST";
+                            b3 = "<a href='store.html'>Store</a> > <a href='category.html'>E-Books</a> > <a href='subcategory.html'>" + categoryName + "</a> > " + subCategoryName;
                         }
                         if (store == "epub") {
-                            b3 = "<a href='store.html'>Books</a> > <a href='category.html'>" + categoryName + "</a> > <a href='subcategory.html'>" + subCategoryName + "</a> > BOOK LIST";
+                            b3 = "<a href='store.html'>Store</a> > <a href='category.html'>Books</a> > <a href='subcategory.html'>" + categoryName + "</a> > " + subCategoryName;
                         }
                     }
                 }
@@ -93,7 +93,7 @@
                     var strBookList = '';
                     var arrBookList = data.book_list;
                     strBookList = '<div class="card"><div class="body"><div class="row"><div class="col-md-12">';
-                    strBookList = strBookList + '<h4 style="color: #03A9F4;">' + b3 + '</h4></div>';
+                    strBookList = strBookList + '<h3 style="color: #03A9F4;">' + b3 + '</h3></div>';
 
                     for (i = 0; i < arrBookList.length; i++) {
                         var filtered = lstBooks.filter(function(value) {
@@ -106,7 +106,11 @@
                         strBookList = strBookList + '<h3>' + arrBookList[i].name + '</h3>';
 
                         if (filtered.length > 0) {
-                            strBookList = strBookList + '<p><button onclick="openPDf(\'' + arrBookList[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            if (arrBookList[i].format == "video") {
+                                strBookList = strBookList + '<p><button onclick="openVIDEO(\'' + arrBookList[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            } else {
+                                strBookList = strBookList + '<p><button onclick="openPDf(\'' + arrBookList[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            }
                         } else {
                             strBookList = strBookList + '<p><button onclick="download(' + arrBookList[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
                         }
@@ -140,6 +144,23 @@
                 height: 900,
                 parent: currentWindow
             })
+            win.setMenu(null);
+            win.loadFile('viewer.html')
+        }
+
+        function openVIDEO(url) {
+            window.localStorage.removeItem("linkURL");
+            window.localStorage.setItem("linkURL", url);
+            const {
+                BrowserWindow
+            } = require('electron').remote
+            var remote = require('electron').remote;
+            var currentWindow = remote.getCurrentWindow();
+            const win = new BrowserWindow({
+                width: 1600,
+                height: 900,
+                parent: currentWindow
+            });
             win.setMenu(null);
             win.loadFile('videoplayer.html')
         }
