--- a/main.html
+++ b/main.html
@@ -78,7 +78,11 @@
                         strTopNewBook = strTopNewBook + '<h3>' + arrTopNewBook[i].name + '</h3>';
 
                         if (filtered.length > 0) {
-                            strTopNewBook = strTopNewBook + '<p><button onclick="openPDf(\'' + arrTopNewBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            if (arrTopNewBook[i].format == "video") {
+                                strTopNewBook = strTopNewBook + '<p><button onclick="openVIDEO(\'' + arrTopNewBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            } else {
+                                strTopNewBook = strTopNewBook + '<p><button onclick="openPDf(\'' + arrTopNewBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            }
                         } else {
                             strTopNewBook = strTopNewBook + '<p><button onclick="download(' + arrTopNewBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
                         }
@@ -111,7 +115,11 @@
                         strPopularBook = strPopularBook + '<h3>' + arrPopularBook[i].name + '</h3>';
 
                         if (filtered.length > 0) {
-                            strPopularBook = strPopularBook + '<p><button onclick="openPDf(\'' + arrPopularBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            if (arrPopularBook[i].format == "video") {
+                                strPopularBook = strPopularBook + '<p><button onclick="openVIDEO(\'' + arrPopularBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            } else {
+                                strPopularBook = strPopularBook + '<p><button onclick="openPDf(\'' + arrPopularBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            }
                         } else {
                             strPopularBook = strPopularBook + '<p><button onclick="download(' + arrPopularBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
                         }
@@ -144,7 +152,11 @@
                         strRecommendedBook = strRecommendedBook + '<h3>' + arrRecommendedBook[i].name + '</h3>';
 
                         if (filtered.length > 0) {
-                            strRecommendedBook = strRecommendedBook + '<p><button onclick="openPDf(\'' + arrRecommendedBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            if (arrRecommendedBook[i].format == "video") {
+                                strRecommendedBook = strRecommendedBook + '<p><button onclick="openVIDEO(\'' + arrRecommendedBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            } else {
+                                strRecommendedBook = strRecommendedBook + '<p><button onclick="openPDf(\'' + arrRecommendedBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            }
                         } else {
                             strRecommendedBook = strRecommendedBook + '<p><button onclick="download(' + arrRecommendedBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
                         }
@@ -177,7 +189,11 @@
                         strTopSellingBook = strTopSellingBook + '<h3>' + arrTopSellingBook[i].name + '</h3>';
 
                         if (filtered.length > 0) {
-                            strTopSellingBook = strTopSellingBook + '<p><button onclick="openPDf(\'' + arrTopSellingBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            if (arrTopSellingBook[i].format == "video") {
+                                strTopSellingBook = strTopSellingBook + '<p><button onclick="openVIDEO(\'' + arrTopSellingBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            } else {
+                                strTopSellingBook = strTopSellingBook + '<p><button onclick="openPDf(\'' + arrTopSellingBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                            }
                         } else {
                             strTopSellingBook = strTopSellingBook + '<p><button onclick="download(' + arrTopSellingBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
                         }
@@ -222,8 +238,20 @@
         }
 
         function openVIDEO(url) {
+            window.localStorage.removeItem("linkURL");
             window.localStorage.setItem("linkURL", url);
-            window.location.href = "videoplayer.html";
+            const {
+                BrowserWindow
+            } = require('electron').remote
+            var remote = require('electron').remote;
+            var currentWindow = remote.getCurrentWindow();
+            const win = new BrowserWindow({
+                width: 1600,
+                height: 900,
+                parent: currentWindow
+            });
+            win.setMenu(null);
+            win.loadFile('videoplayer.html')
         }
 
         function download(id) {
