Change Viewers Settings and Login Page

--- a/masterpage.html
+++ b/masterpage.html
@@ -53,12 +53,12 @@
                     <h4 class="uFullname" style="color: #FFF;"></h4>
                     <h5 class="uEmailID" style="color: #FFF;"></h5>
                 </li>
-                <!-- <li>
-                    <a href="#" class="lnkLogin">
+                <li>
+                    <a href="login.html" class="lnkLogin">
                         <i class="material-icons">lock</i>
                         <span style="font-size: 20px;">Login</span>
                     </a>
-                </li> -->
+                </li>
             </ul>
         </div>
     </div>
