--- a/viewer.html
+++ b/viewer.html
@@ -12,9 +12,9 @@
             module = undefined;
         }
     </script>
-    <script src="THEME/plugins/jquery/jquery.min.js"></script>
+    <script src="./THEME/plugins/jquery/jquery.min.js"></script>
     <script src='./public/lib/webviewer.min.js'></script>
-    <script src="THEME/js/custom.js"></script>
+    <script src="./THEME/js/custom.js"></script>
     <script>
         require('./viewer.js');
     </script>
