--- a/booklist1.html
+++ b/booklist1.html
@@ -71,9 +71,9 @@
 
                             if (filtered.length > 0) {
                                 if (arrTopNewBook[i].format == "video") {
-                                    strTopNewBook = strTopNewBook + '<p><button onclick="openVIDEO(\'' + arrTopNewBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strTopNewBook = strTopNewBook + '<p><button onclick="openVIDEO(' + arrTopNewBook[i].book_id + ',\'' + arrTopNewBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 } else {
-                                    strTopNewBook = strTopNewBook + '<p><button onclick="openPDf(\'' + arrTopNewBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strTopNewBook = strTopNewBook + '<p><button onclick="openPDf(' + arrTopNewBook[i].book_id + ',\'' + arrTopNewBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 }
                             } else {
                                 strTopNewBook = strTopNewBook + '<p><button onclick="download(' + arrTopNewBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
@@ -103,9 +103,9 @@
 
                             if (filtered.length > 0) {
                                 if (arrPopularBook[i].format == "video") {
-                                    strPopularBook = strPopularBook + '<p><button onclick="openVIDEO(\'' + arrPopularBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strPopularBook = strPopularBook + '<p><button onclick="openVIDEO(' + arrPopularBook[i].book_id + ',\'' + arrPopularBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 } else {
-                                    strPopularBook = strPopularBook + '<p><button onclick="openPDf(\'' + arrPopularBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strPopularBook = strPopularBook + '<p><button onclick="openPDf(' + arrPopularBook[i].book_id + ',\'' + arrPopularBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 }
                             } else {
                                 strPopularBook = strPopularBook + '<p><button onclick="download(' + arrPopularBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
@@ -135,9 +135,9 @@
 
                             if (filtered.length > 0) {
                                 if (arrRecommendedBook[i].format == "video") {
-                                    strRecommendedBook = strRecommendedBook + '<p><button onclick="openVIDEO(\'' + arrRecommendedBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strRecommendedBook = strRecommendedBook + '<p><button onclick="openVIDEO(' + arrRecommendedBook[i].book_id + ',\'' + arrRecommendedBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 } else {
-                                    strRecommendedBook = strRecommendedBook + '<p><button onclick="openPDf(\'' + arrRecommendedBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strRecommendedBook = strRecommendedBook + '<p><button onclick="openPDf(' + arrRecommendedBook[i].book_id + ',\'' + arrRecommendedBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 }
                             } else {
                                 strRecommendedBook = strRecommendedBook + '<p><button onclick="download(' + arrRecommendedBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
@@ -167,9 +167,9 @@
 
                             if (filtered.length > 0) {
                                 if (arrTopSellingBook[i].format == "video") {
-                                    strTopSellingBook = strTopSellingBook + '<p><button onclick="openVIDEO(\'' + arrTopSellingBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strTopSellingBook = strTopSellingBook + '<p><button onclick="openVIDEO(' + arrTopSellingBook[i].book_id + ',\'' + arrTopSellingBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 } else {
-                                    strTopSellingBook = strTopSellingBook + '<p><button onclick="openPDf(\'' + arrTopSellingBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
+                                    strTopSellingBook = strTopSellingBook + '<p><button onclick="openPDf(' + arrTopSellingBook[i].book_id + ',\'' + arrTopSellingBook[i].file_path + '\')" class="btn btn-success">VIEW</button>';
                                 }
                             } else {
                                 strTopSellingBook = strTopSellingBook + '<p><button onclick="download(' + arrTopSellingBook[i].book_id + ')" class="btn btn-success">DOWNLOAD</button>';
@@ -192,7 +192,9 @@
             window.location.href = "bookdetail.html";
         }
 
-        function openPDf(url) {
+        function openPDf(id, url) {
+            window.localStorage.removeItem("rBookID");
+            window.localStorage.setItem("rBookID", id);
             window.localStorage.removeItem("pdfUrl");
             window.localStorage.setItem("pdfUrl", url);
             const {
@@ -209,7 +211,9 @@
             win.loadFile('viewer.html')
         }
 
-        function openVIDEO(url) {
+        function openVIDEO(id, url) {
+            window.localStorage.removeItem("rBookID");
+            window.localStorage.setItem("rBookID", id);
             window.localStorage.removeItem("linkURL");
             window.localStorage.setItem("linkURL", url);
             const {
@@ -239,6 +243,7 @@
                 lstBooks.push(id.toString());
                 window.localStorage.setItem("lstBooks", JSON.stringify(lstBooks));
                 alert("Books successfully downloaded.");
+                window.location.reload();
             }
         }
     </script>
